--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "description": "Here I build a currency converter by using typescript, node.js, inquirer",
   "main": "index.js",
   "type": "module",
+  "bin":"index.js",
   
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
