--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Here I build a currency converter by using typescript, node.js, inquirer",
   "main": "index.js",
   "type": "module",
-  "bin":"index.js",
+  "bin":{
+
+    "04_currency-converter":"index.js"
+  },
   
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
